--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,12 @@
-[submodule "jellyfin-server"]
-	path = jellyfin-server
-	url = https://github.com/jellyfin/jellyfin
-[submodule "jellyfin-web"]
-	path = jellyfin-web
-	url = https://github.com/jellyfin/jellyfin-web
-[submodule "jellyfin-server-windows"]
-	path = jellyfin-server-windows
-	url = https://github.com/jellyfin/jellyfin-server-windows.git
+[submodule "cinedelta-server"]
+    path = cinedelta-server
+    url = https://github.com/EskridGames/cinedelta.git
+
+[submodule "cinedelta-web"]
+    path = cinedelta-web
+    url = https://github.com/EskridGames/cinedelta-web.git
+
+[submodule "cinedelta-server-windows"]
+    path = cinedelta-server-windows
+    url = https://github.com/EskridGames/cinedelta-server-windows.git
+
